--- a/Paradigmas/nbproject/project.properties
+++ b/Paradigmas/nbproject/project.properties
@@ -30,13 +30,21 @@ excludes=
 file.reference.java-cup-11a.jar=C:\\Users\\Aylin\\Documents\\Documentos\\Quinto Semestre\\Fuentes\\jflex\\lib\\java-cup-11a.jar
 file.reference.java-cup-11b.jar=C:\\Users\\Aylin\\Documents\\Documentos\\Quinto Semestre\\Fuentes\\java-cup-11b.jar
 file.reference.jflex-1.6.1.jar=C:\\Users\\Aylin\\Documents\\Documentos\\Quinto Semestre\\Fuentes\\jflex\\lib\\jflex-1.6.1.jar
+file.reference.org-jdesktop-swingx.jar.zip=C:\\Users\\Aylin\\Downloads\\org-jdesktop-swingx.jar.zip
+file.reference.swingx-all-1.6.4.jar.zip=C:\\Users\\Aylin\\Downloads\\swingx-all-1.6.4.jar.zip
+file.reference.swingx-core-1.6.2-AutoCompletition.jar.zip=C:\\Users\\Aylin\\Documents\\swingx-core-1.6.2-AutoCompletition.jar.zip
+file.reference.swingx.jar.zip=C:\\Users\\Aylin\\Downloads\\swingx.jar.zip
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.java-cup-11b.jar}:\
     ${file.reference.java-cup-11a.jar}:\
     ${file.reference.jflex-1.6.1.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.swingx-core-1.6.2-AutoCompletition.jar.zip}:\
+    ${file.reference.swingx-all-1.6.4.jar.zip}:\
+    ${file.reference.swingx.jar.zip}:\
+    ${file.reference.org-jdesktop-swingx.jar.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
