--- a/Paradigmas/nbproject/project.properties
+++ b/Paradigmas/nbproject/project.properties
@@ -29,7 +29,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.java-cup-11a.jar=C:\\Users\\Aylin\\Documents\\Documentos\\Quinto Semestre\\Fuentes\\jflex\\lib\\java-cup-11a.jar
 file.reference.java-cup-11b.jar=C:\\Users\\Aylin\\Documents\\Documentos\\Quinto Semestre\\Fuentes\\java-cup-11b.jar
+file.reference.jcommon-1.0.23.jar=C:\\Users\\Aylin\\Downloads\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
 file.reference.jflex-1.6.1.jar=C:\\Users\\Aylin\\Documents\\Documentos\\Quinto Semestre\\Fuentes\\jflex\\lib\\jflex-1.6.1.jar
+file.reference.jfreechart-1.0.19-experimental.jar=C:\\Users\\Aylin\\Downloads\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19-experimental.jar
+file.reference.jfreechart-1.0.19-swt.jar=C:\\Users\\Aylin\\Downloads\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19.jar=C:\\Users\\Aylin\\Downloads\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19.jar
 file.reference.org-jdesktop-swingx.jar.zip=C:\\Users\\Aylin\\Downloads\\org-jdesktop-swingx.jar.zip
 file.reference.swingx-all-1.6.4.jar.zip=C:\\Users\\Aylin\\Downloads\\swingx-all-1.6.4.jar.zip
 file.reference.swingx-core-1.6.2-AutoCompletition.jar.zip=C:\\Users\\Aylin\\Documents\\swingx-core-1.6.2-AutoCompletition.jar.zip
@@ -44,7 +48,11 @@ javac.classpath=\
     ${file.reference.swingx-core-1.6.2-AutoCompletition.jar.zip}:\
     ${file.reference.swingx-all-1.6.4.jar.zip}:\
     ${file.reference.swingx.jar.zip}:\
-    ${file.reference.org-jdesktop-swingx.jar.zip}
+    ${file.reference.org-jdesktop-swingx.jar.zip}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jfreechart-1.0.19-experimental.jar}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
